# rules_typescript

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SP10_COMPLETION_SUMMARY.md  TODO.md  WORKSPACE.bazel  mkdocs.yml  rules-ts-v2-project-plan.md  tsconfig.json
.bcr/: metadata.json  presubmit.yml  source.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-to-bcr.yml  release.yml
docs/: BCR_SUBMISSION.md  CI_CD.md  ERGONOMICS_COMPARISON.md  RELEASE_PROCESS.md  changelog.md  contributing.md  index.md
docs/gazelle/: directives.md  overview.md
docs/getting-started/: ide-setup.md  isolated-declarations.md  migration.md  quickstart.md
docs/guides/: bundling.md  dev-server.md  monorepo.md  npm.md  publishing.md  testing.md  troubleshooting.md
docs/rules/: node-modules.md  ts-binary.md  ts-bundle.md  ts-compile.md  ts-dev-server.md  ts-npm-publish.md  ts-test.md
e2e/basic/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
e2e/basic/src/app/: BUILD.bazel  index.ts
e2e/basic/src/components/: BUILD.bazel  Button.tsx  index.ts  jsx-shim.d.ts
e2e/basic/src/lib/: BUILD.bazel  index.ts  math.test.ts  math.ts
e2e/basic/src/utils/: BUILD.bazel  helpers.ts
eslint-plugin/: package-lock.json  package.json  tsup.config.ts
eslint-plugin/src/: index.ts  utils.ts
examples/app/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  pnpm-lock.yaml
examples/app/src/app/: BUILD.bazel  index.ts
examples/app/src/schema/: BUILD.bazel  index.ts  user.test.ts  user.ts
examples/basic/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
examples/basic/src/: BUILD.bazel
examples/basic/src/app/: BUILD.bazel  index.ts
examples/basic/src/lib/: BUILD.bazel  math.ts
examples/nextjs-app/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  gazelle_ts.json  next.config.mjs  package.json  pnpm-lock.yaml
examples/nextjs-app/app/: layout.tsx  page.tsx
examples/nextjs-app/app/about/: page.tsx
examples/react-app/: BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
examples/react-app/src/app/: App.tsx  BUILD.bazel  index.ts
examples/react-app/src/components/: BUILD.bazel  Button.test.tsx  Button.tsx  Counter.tsx  index.ts
examples/react-app/src/components/dom/: BUILD.bazel  Button.dom.test.tsx  vitest.config.mjs
examples/react-app/src/hooks/: BUILD.bazel  index.ts  useCounter.test.ts  useCounter.ts
examples/react-app/src/validation/: BUILD.bazel  index.ts  userSchema.test.ts  userSchema.ts
examples/remix-app/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  index.html  package.json  pnpm-lock.yaml  remix-vite.config.mjs
examples/remix-app/app/: BUILD.bazel  entry.client.tsx  root.tsx
examples/remix-app/app/routes/: BUILD.bazel  _index.tsx  about.tsx
examples/tanstack-app/: BUILD.bazel  MODULE.bazel  README.md  generate-routes.sh  index.html  package.json  pnpm-lock.yaml  tanstack-vite.config.mjs
examples/tanstack-app/src/: BUILD.bazel
examples/tanstack-app/src/app/: BUILD.bazel  index.ts  main.tsx
examples/tanstack-app/src/components/: BUILD.bazel  Layout.tsx  UserCard.test.tsx  UserCard.tsx  index.ts
examples/tanstack-app/src/lib/: BUILD.bazel  index.ts  params.test.ts  params.ts  router.test.ts  router.ts
examples/tanstack-app/src/routes/: BUILD.bazel  __root.tsx  about.tsx  index.tsx  users.tsx
gazelle/: BUILD.bazel  codegen.go  codegen_test.go  config.go  directives_test.go  framework_bundle.go  generate.go  go.mod  imports.go  imports_test.go  language.go  resolve.go
gazelle/tanstack/: BUILD.bazel  plugin.go  plugin_test.go
npm/: BUILD.bazel  defs.bzl  extensions.bzl
npm/private/: BUILD.bazel
oxc_cli/: BUILD.bazel  Cargo.toml
oxc_cli/src/: main.rs  options.rs  transform.rs
scripts/: ci.sh  quickstart.sh  release.sh  test_all.sh  verify_determinism.sh
tests/: BUILD.bazel
tests/assets/: BUILD.bazel  Header.tsx  verify_assets.sh
tests/bootstrap/: BUILD.bazel  test_codegen.sh  test_css_assets.sh  test_dev_server.sh  test_existing_project.sh  test_gazelle_roundtrip.sh  test_new_project.sh  test_npm_deps.sh  test_vite_bundle.sh
tests/bundle/: BUILD.bazel  app.ts  verify_bundle.sh
tests/codegen/: BUILD.bazel  consumer.ts  generator.sh  input.ts  verify_codegen.sh
tests/css/: BUILD.bazel  Button.tsx  button.css  theme.css  verify_css.sh
tests/css_module/: BUILD.bazel  Button.module.css  Button.tsx  verify_css_module.sh
tests/css_module_test/: BUILD.bazel  Button.module.css  Button.test.ts  Button.ts
tests/dev_server/: BUILD.bazel  app.ts  verify_dev_server.sh  verify_dev_server_plugin.sh  verify_dev_server_react_refresh.sh  verify_dev_server_react_refresh_plugin.sh
tests/integration/: BUILD.bazel
tools/: BUILD.bazel  add_package_wrapper.sh  pnpm_wrapper.sh  refresh_tsconfig.sh  tsserver-hook-worker.js  tsserver-hook.js
tools/gazelle-check/: BUILD.bazel  check.sh
tools/isolated-declarations-lint/: package.json  tsconfig.json
tools/isolated-declarations-lint/src/: index.ts  utils.ts
tools/isolated-declarations-lint/src/rules/: require-explicit-types.ts
tools/isolated-declarations-lint/src/rules/__tests__/: require-explicit-types.test.ts
ts/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  vite_env.d.ts
ts/private/: BUILD.bazel  asset_library.bzl  css_library.bzl  css_module.bzl  json_library.bzl  next_build.bzl  node_modules.bzl  npm_bin.bzl  npm_translate_lock.bzl  pnpm.bzl  providers.bzl  runtime.bzl  toolchain.bzl  ts_binary.bzl  ts_bundle.bzl  ts_check.bzl  ts_codegen.bzl  ts_compile.bzl  ts_config_gen.bzl  ts_dev_server.bzl  ts_lint.bzl  ts_npm_package.bzl  ts_npm_publish.bzl  ts_test.bzl
ts/toolchain/: BUILD.bazel  resolved_node.bzl  resolved_oxc.bzl  resolved_tsgo.bzl
vite/: BUILD.bazel  bundler.bzl  package.json  tsconfig.json  tsup.config.ts
vite/src/: index.ts  plugin.ts  resolver.ts  watcher.ts
(+211 files in other folders)
