"""rules_typescript - TypeScript rules for Bazel using Oxc and tsgo."""

module(
    name = "rules_typescript",
    version = "0.1.0",
    compatibility_level = 0,
)

# ─── Bazel dependencies ─────────────────────────────────────────────────────

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "toolchain_utils", version = "1.3.0")

# Gazelle and rules_go must be non-dev dependencies so that:
# 1. load() statements in //gazelle:BUILD.bazel (which reference @rules_go//)
#    resolve correctly when the gazelle package is loaded from a consumer workspace.
# 2. The go_sdk and go_deps extension calls below (which configure the Go toolchain
#    and fetch Go module dependencies for the Gazelle binary) propagate transitively
#    to consumers via bzlmod. Consumers therefore need only:
#      bazel_dep(name = "gazelle", version = "0.47.0")
#    and get rules_go, the Go SDK, and Go deps for free.
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.60.0")

# ─── Rust toolchain ─────────────────────────────────────────────────────────

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.94.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# ─── Go toolchain (for Gazelle extension) ────────────────────────────────────

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//gazelle:go.mod")

# ─── crate_universe (Rust crate dependencies for oxc_cli) ───────────────────

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//oxc_cli:Cargo.lock",
    manifests = ["//oxc_cli:Cargo.toml"],
)
use_repo(crate, "crates")

# ─── Node.js toolchain (via rules_nodejs) ───────────────────────────────────

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    # The explicit name "nodejs" documents the dependency: _NODEJS_REPO_PLATFORM
    # in ts/private/runtime.bzl constructs repo labels as "nodejs_<platform>",
    # which requires this prefix to match.
    name = "nodejs",
    node_version = "22.14.0",
)
use_repo(
    node,
    "nodejs_darwin_amd64",
    "nodejs_darwin_arm64",
    "nodejs_linux_amd64",
    "nodejs_linux_arm64",
    "nodejs_windows_amd64",
)

# ─── TypeScript toolchains ──────────────────────────────────────────────────

ts = use_extension("//ts:extensions.bzl", "ts")
ts.oxc_toolchain(
    name = "oxc",
)
ts.tsgo_toolchain(
    name = "tsgo",
    tsgo_version = "7.0.0-dev.20260311.1",
)
use_repo(ts, "oxc", "tsgo")

# Toolchain registration is the CONSUMER's responsibility.
# rules_typescript does NOT register its own toolchains — consumers must add:
#
#   register_toolchains("@rules_typescript//ts/toolchain:all")
#
# to their own MODULE.bazel. This matches the rules_go pattern where consumers
# explicitly opt in to toolchain registration.
#
# For the main repo's own tests, we register them here:
register_toolchains("//ts/toolchain:all")

# ─── npm dependencies ────────────────────────────────────────────────────────

npm = use_extension("//npm:extensions.bzl", "npm")
npm.pnpm(version = "10.32.1")
npm.translate_lock(pnpm_lock = "//tests/npm:pnpm-lock.yaml")
use_repo(npm, "npm", "pnpm")
