# Tools shipped with rules_typescript.
# Shell scripts referenced by macros in ts/private/pnpm.bzl.

package(default_visibility = ["//visibility:public"])

exports_files([
    "add_package_wrapper.sh",
    "pnpm_wrapper.sh",
    "refresh_tsconfig.sh",
    "tsserver-hook.js",
    "tsserver-hook-worker.js",
])
