"""Root BUILD file for the basic example workspace.

Demonstrates ts_binary bundling with cross-package dependencies.
Run `bazel build //...` to compile all packages.
Run `bazel run //:gazelle` to auto-generate BUILD files from TypeScript sources.
"""

load("@gazelle//:def.bzl", "gazelle")
load("@rules_typescript//ts:defs.bzl", "ts_binary")

# Run "bazel run //:gazelle" to auto-generate BUILD files.
gazelle(
    name = "gazelle",
    gazelle = "@rules_typescript//gazelle:gazelle_ts",
)

# Bundle the app entry point.  This pulls in //src/lib transitively and
# demonstrates ts_binary's cross-package dependency wiring.
ts_binary(
    name = "app_bundle",
    entry_point = "//src/app",
    format = "esm",
    sourcemap = True,
)
